JSW Devsb/src/objects/Material_Source__c.object
<CustomObject>
    <fields>
        <fullName>COD__c</fullName>
        <label>COD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_code__c</fullName>
        <label>City code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Priority__c</fullName>
        <label>Delivery Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Code__c</fullName>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Type__c</fullName>
        <label>Packing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pref__c</fullName>
        <label>Pref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_Code__c</fullName>
        <label>SFDC Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Cat__c</fullName>
        <label>Tax Cat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_type__c</fullName>
        <label>shipping type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Material Source</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SFDC_Product_Code__c</columns>
        <columns>Packing_Type__c</columns>
        <columns>shipping_type__c</columns>
        <columns>Tax_Cat__c</columns>
        <columns>City_code__c</columns>
        <columns>Delivery_Priority__c</columns>
        <columns>Material_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Meterial Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>